--- a/order.html
+++ b/order.html
@@ -19,9 +19,9 @@
                         <p class="head_cont">Україна, м.Київ, вул. Хрещатик 10</p>
                         </div>
                         <nav class="nav">                    
-                        <a class="nav_link" href="file:///C:/Users/nekro/Desktop/%D0%92%D0%B5%D0%B1%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0/Apollo%20Tuning%20&%20Service/index.html">Головна</a>
-                        <a class="nav_link" href="file:///C:/Users/nekro/Desktop/%D0%92%D0%B5%D0%B1%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0/Apollo%20Tuning%20&%20Service/order.html">Замовлення</a>
-                        <a class="nav_link" href="file:///C:/Users/nekro/Desktop/%D0%92%D0%B5%D0%B1%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0/Apollo%20Tuning%20&%20Service/gallery.html">Галерея</a>
+                        <a class="nav_link" href="https://minkovivan.github.io/web-page/index.html">Головна</a>
+                        <a class="nav_link" href="https://minkovivan.github.io/web-page/order.html">Замовлення</a>
+                        <a class="nav_link" href="https://minkovivan.github.io/web-page/gallery.html">Галерея</a>
                         </nav>
                         <div class="flag">
                         <img src="images/flag.png" alt="">
