--- a/gallery.html
+++ b/gallery.html
@@ -135,15 +135,15 @@
                     <h2 class="gallery_footer_text2">Зателефонуйте</h2>
                 </div>
                 <gallery_intro_button1_1 class="gallery_intro_button1_1">
-                    <a class="gal_in_button1_1" href="file:///C:/Users/nekro/Desktop/%D0%92%D0%B5%D0%B1%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0/Apollo%20Tuning%20&%20Service/order.html">Зв'язатись з нами</a>
+                    <a class="gal_in_button1_1" href="https://minkovivan.github.io/web-page/order.html">Зв'язатись з нами</a>
                 </gallery_intro_button1_1>
                 <gallery_intro_button1 class="gallery_intro_button1">
-                    <a class="gal_in_button1" href="file:///C:/Users/nekro/Desktop/%D0%92%D0%B5%D0%B1%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0/Apollo%20Tuning%20&%20Service/order.html">Зв'язатись з нами</a>
+                    <a class="gal_in_button1" href="https://minkovivan.github.io/web-page/order.html">Зв'язатись з нами</a>
                 </gallery_intro_button1>
                 <h2 class="center_word1_1">або</h2>
                 <h2 class="gallery_footer_text2_1">Зателефонуйте</h2>
                 <gallery_intro_button2 class="gallery_intro_button2">
-                    <a class="gal_in_button2" href="file:///C:/Users/nekro/Desktop/%D0%92%D0%B5%D0%B1%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0/Apollo%20Tuning%20&%20Service/order.html">+38 099 976 1234</a>
+                    <a class="gal_in_button2" href="https://minkovivan.github.io/web-page/order.html">+38 099 976 1234</a>
                 </gallery_intro_button2>
                 <h3 class="footer_bottom2">Apollo Tuning & Sevice - Київ 2018 - 2022</h3>
             </div>
