--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                     <p class="head_cont">Україна, м.Київ, вул. Хрещатик 10</p>
                     </div>
                     <nav class="nav">                    
-                    <a class="nav_link" href="index.html">Головна</a>
-                    <a class="nav_link" href="file:///C:/Users/nekro/Desktop/%D0%92%D0%B5%D0%B1%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0/Apollo%20Tuning%20&%20Service/order.html">Замовлення</a>
-                    <a class="nav_link" href="file:///C:/Users/nekro/Desktop/%D0%92%D0%B5%D0%B1%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0/Apollo%20Tuning%20&%20Service/gallery.html">Галерея</a>
+                    <a class="nav_link" href="https://minkovivan.github.io/web-page/index.html">Головна</a>
+                    <a class="nav_link" href="https://minkovivan.github.io/web-page/order.html">Замовлення</a>
+                    <a class="nav_link" href="https://minkovivan.github.io/web-page/gallery.html">Галерея</a>
                     </nav>
                     <div class="flag">
                     <img src="images/flag.png" alt="">
@@ -45,11 +45,11 @@
                         <p class="intro_subtitle">Тюнінг ательє у Києві - Україна</p>
                     </div>
                     <intro_button class="intro_button">
-                        <a class="in_button" href="file:///C:/Users/nekro/Desktop/%D0%92%D0%B5%D0%B1%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0/Apollo%20Tuning%20&%20Service/order.html">Зв'язатись з нами</a>
+                        <a class="in_button" href="https://minkovivan.github.io/web-page/order.html">Зв'язатись з нами</a>
                     </intro_button>
                     </div>
                     <intro_button1 class="intro_button1">
-                        <a class="in_button1" href="file:///C:/Users/nekro/Desktop/%D0%92%D0%B5%D0%B1%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0/Apollo%20Tuning%20&%20Service/order.html">Зв'язатись з нами</a>
+                        <a class="in_button1" href="https://minkovivan.github.io/web-page/order.html">Зв'язатись з нами</a>
                     </intro_button1>
                 </div>
             </div>
@@ -86,32 +86,32 @@
                 </div>
                 <div class="third_intro_photos">
                     <div class="about_photos">
-                        <a class="photo_link" href="file:///C:/Users/nekro/Desktop/%D0%92%D0%B5%D0%B1%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0/Apollo%20Tuning%20&%20Service/gallery.html">
+                        <a class="photo_link" href="https://minkovivan.github.io/web-page/gallery.html">
                         <div class="photo1">
                             <img src="images/photo1.jpg" alt="">
                         </div>
                         <div class="photo1_1">
-                            <img src="images/mediaphoto1_1.png" alt="" href="file:///C:/Users/nekro/Desktop/%D0%92%D0%B5%D0%B1%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0/Apollo%20Tuning%20&%20Service/gallery.html">
+                            <img src="images/mediaphoto1_1.png" alt="" href="https://minkovivan.github.io/web-page/gallery.html">
                         </div>
                         </a>
                     </div>    
                     <div class="about_photos">
-                        <a class="photo_link" href="file:///C:/Users/nekro/Desktop/%D0%92%D0%B5%D0%B1%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0/Apollo%20Tuning%20&%20Service/gallery.html">
+                        <a class="photo_link" href="https://minkovivan.github.io/web-page/gallery.html">
                         <div class="photo2">
-                            <img src="images/photo2.jpg" alt="" href="file:///C:/Users/nekro/Desktop/%D0%92%D0%B5%D0%B1%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0/Apollo%20Tuning%20&%20Service/gallery.html">
+                            <img src="images/photo2.jpg" alt="" href="https://minkovivan.github.io/web-page/gallery.html">
                         </div>
                         <div class="photo2_1">
-                            <img src="images/mediaphoto2_1.png" alt="" href="file:///C:/Users/nekro/Desktop/%D0%92%D0%B5%D0%B1%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0/Apollo%20Tuning%20&%20Service/gallery.html">
+                            <img src="images/mediaphoto2_1.png" alt="" href="https://minkovivan.github.io/web-page/gallery.html">
                         </div>
                         </a>
                     </div>
                     <div class="about_photos">
-                        <a class="photo_link" href="file:///C:/Users/nekro/Desktop/%D0%92%D0%B5%D0%B1%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0/Apollo%20Tuning%20&%20Service/gallery.html">
+                        <a class="photo_link" href="https://minkovivan.github.io/web-page/gallery.html">
                         <div class="photo3">
-                            <img src="images/photo3.jpg" alt="" href="file:///C:/Users/nekro/Desktop/%D0%92%D0%B5%D0%B1%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0/Apollo%20Tuning%20&%20Service/gallery.html">
+                            <img src="images/photo3.jpg" alt="" href="https://minkovivan.github.io/web-page/gallery.html">
                         </div>
                         <div class="photo3_1">
-                            <img src="images/mediaphoto3_1.png" alt="" href="file:///C:/Users/nekro/Desktop/%D0%92%D0%B5%D0%B1%20%D1%80%D0%B0%D0%B7%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0/Apollo%20Tuning%20&%20Service/gallery.html">
+                            <img src="images/mediaphoto3_1.png" alt="" href="https://minkovivan.github.io/web-page/gallery.html">
                         </div>
                         </a>
                     </div>
@@ -139,10 +139,10 @@
                     <div class="footer_text">
                         <h2 class="column_title">Швидкий зв’язок:</h2>
                         <nav_foot class="nav_foot">                    
-                            <a class="foot_link" href="#">WhatsApp<br></a>
-                            <a class="foot_link" href="#">Instagram<br></a>
-                            <a class="foot_link" href="#">Facebook<br></a>
-                            <a class="foot_link" href="#">+38 099 976 1234</a>
+                            <a class="foot_link" href="https://minkovivan.github.io/web-page/order.html">WhatsApp<br></a>
+                            <a class="foot_link" href="https://minkovivan.github.io/web-page/order.html">Instagram<br></a>
+                            <a class="foot_link" href="https://minkovivan.github.io/web-page/order.html">Facebook<br></a>
+                            <a class="foot_link" href="https://minkovivan.github.io/web-page/order.html">+38 099 976 1234</a>
                             </nav_foot>
                     </div>
                 </div>
